crates/ars-components/src/input/editable/snapshots/ars_components__input__editable__tests__editable_disabled_trigger.snap
---
source: crates/ars-components/src/input/editable/mod.rs
expression: "snapshot_attrs(&service(props().disabled(true)).connect(&|_|\n{}).edit_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "edit-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "editable",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Edit",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
