crates/ars-components/src/input/editable/snapshots/ars_components__input__editable__tests__editable_input_form_constraints.snap
---
source: crates/ars-components/src/input/editable/mod.rs
expression: "snapshot_attrs(&service(props().default_value(\"draft\").placeholder(\"Label\").max_length(32).name(\"title\").form(\"settings\").required(true).invalid(true)).connect(&|_|\n{}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "editable",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Editable field",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "editable-input",
            ),
        ),
        (
            Form,
            String(
                "settings",
            ),
        ),
        (
            MaxLength,
            String(
                "32",
            ),
        ),
        (
            Name,
            String(
                "title",
            ),
        ),
        (
            Placeholder,
            String(
                "Label",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Value,
            String(
                "draft",
            ),
        ),
    ],
    styles: [],
}
