crates/ars-components/src/input/editable/snapshots/ars_components__input__editable__tests__editable_label.snap
---
source: crates/ars-components/src/input/editable/mod.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "editable",
            ),
        ),
        (
            Id,
            String(
                "editable-label",
            ),
        ),
        (
            For,
            String(
                "editable-input",
            ),
        ),
    ],
    styles: [],
}
