crates/ars-components/src/input/editable/snapshots/ars_components__input__editable__tests__editable_root_disabled_readonly_invalid_focus_visible.snap
---
source: crates/ars-components/src/input/editable/mod.rs
expression: "snapshot_attrs(&flagged.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-disabled",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "editable",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "preview",
            ),
        ),
        (
            Id,
            String(
                "editable",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
