crates/ars-components/src/input/editable/snapshots/ars_components__input__editable__tests__editable_root_editing.snap
---
source: crates/ars-components/src/input/editable/mod.rs
expression: "snapshot_attrs(&editing.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "editable",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "editing",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
